--- a/public/src/main/webapp/resources/css/my.css
+++ b/public/src/main/webapp/resources/css/my.css
@@ -883,24 +883,7 @@ body.nav-expanded {
     margin-bottom: 18px;
 }
 
-.btn_buy {
-    margin: 35px 20px 0 0;
-    background: #89edff;
-    color: #111;
-    display: inline-block;
-    vertical-align: top;
-    zoom: 1;
-    font-size: 1.0625rem;
-    padding: 0 30px;
-    height: 50px;
-    text-align: center;
-    text-decoration: none;
-    line-height: 50px;
-    -webkit-transition: background 0.35s ease, color 0.35s ease;
-    transition: background 0.35s ease, color 0.35s ease;
-    font-family: "Calibri Light";
-    cursor: pointer;
-}
+
 
 .cart_btn_del {
     margin: 18px 0px -14px 2px;
@@ -970,3 +953,207 @@ body.nav-expanded {
     margin-top: 0px;
     margin-left: -4px;
 }
+
+a:focus {
+    outline: none;
+}
+
+.modal {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .modal:before {
+        display: inline-block;
+        vertical-align: middle;
+        content: " ";
+        height: 100%;
+    }
+}
+
+.modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+}
+
+.modal-content {
+    box-shadow: none;
+    background-color: #f5f5f5;
+}
+
+.modal-header {
+    padding: 29px;
+}
+
+.modal-header .close {
+    margin: -19px -18px;
+}
+
+.modal-title {
+    font-size: 22px;
+    font-family: Calibri light;
+}
+
+.form__group {
+    margin: 0 0 30px;
+    padding: 0;
+    border: 0;
+}
+
+.form__label {
+    width: 98px;
+    margin: 0 14px 0 14px;
+    color: #111;
+    line-height: 50px;
+    vertical-align: top;
+    font-size: 20px;
+    font-family: Calibri Light;
+    font-weight: 100;
+}
+
+.form__field {
+    width: 424px;
+    outline: none;
+    box-sizing: border-box;
+    height: 50px;
+    padding: 0 18px;
+    transition: border 0.25s ease;
+    color: #111;
+    border: 1px solid #e1e1e1;
+    background: #ffffff;
+    font-family: Geometria, sans-serif;
+    font-size: 17px;
+}
+
+.form-auth__additionalLinks {
+    font-size: 15px;
+    float: right;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 220px;
+    font-family: "Calibri Light";
+    font-weight: 100;
+}
+
+.form-auth__additionalLinks li {
+    margin: 0 0 4px;
+}
+
+.form-auth__additionalLinks a {
+    font-size: 15px;
+    line-height: 1.33333em;
+    color: #898989;
+    text-decoration: none;
+}
+
+.form-auth__additionalLinks a:hover {
+    color: #000;
+}
+
+input[type=submit] {
+    border: none;
+}
+
+.modal-body {
+    margin-bottom: -10px;
+    margin-top: 21px;
+}
+
+
+fieldset {
+    margin: 0px 16px -7px 0px;
+}
+
+.btn_log {
+    margin: 2px 65px 0 0;
+    width: 25%;
+    background: #89edff;
+    color: #111;
+    display: inline-block;
+    vertical-align: top;
+    zoom: 1;
+    font-size: 1.0625rem;
+    padding: 0 30px;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    line-height: 50px;
+    -webkit-transition: background 0.35s ease, color 0.35s ease;
+    transition: background 0.35s ease, color 0.35s ease;
+    font-family: "Calibri Light";
+    cursor: pointer;
+}
+.btn_reg {
+    margin: 2px 0 0 204px;
+    width: 35%;
+    background: #89edff;
+    color: #111;
+    display: inline-block;
+    vertical-align: top;
+    zoom: 1;
+    font-size: 1.0625rem;
+    padding: 0 30px;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    line-height: 50px;
+    -webkit-transition: background 0.35s ease, color 0.35s ease;
+    transition: background 0.35s ease, color 0.35s ease;
+    font-family: "Calibri Light";
+    cursor: pointer;
+}
+
+.btn_buy {
+    margin: 35px 20px 0 0;
+    background: #89edff;
+    color: #111;
+    display: inline-block;
+    vertical-align: top;
+    zoom: 1;
+    font-size: 1.0625rem;
+    padding: 0 30px;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    line-height: 50px;
+    -webkit-transition: background 0.35s ease, color 0.35s ease;
+    transition: background 0.35s ease, color 0.35s ease;
+    font-family: "Calibri Light";
+    cursor: pointer;
+}
+
+.authWrapper  {
+    margin: 53px auto;
+    width: 700px;
+    padding-left: 56px;
+}
+
+.authWrapper .title-h1{
+    margin: 0 0 60px;
+    font-family: "Calibri Light";
+}
+
+.authWrapper__note {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.75em;
+    margin: 0 0 60px;
+    font-family: "Calibri Light";
+}
+
+form {
+    display: block;
+    margin-top: 0em;
+}
+
+
+.form__label__add{
+    width: 170px;
+    margin: 0 30px 0 0;
+    font-size: 24px;
+}
+
+
+
