--- a/public/src/main/webapp/resources/css/my.css
+++ b/public/src/main/webapp/resources/css/my.css
@@ -655,7 +655,11 @@ body.nav-expanded {
 .pageend {
     background-color: #fff;
     padding-top: 70px;
-    padding-bottom: 70px;
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 253px;
 }
 
 .titleend {
@@ -1197,6 +1201,75 @@ form {
     font-weight: 100;
     font-size: 17px;
 }
+
 .log_error_info {
     margin-left: 149px;
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 253px;
+}
+
+.aboutfield {
+    margin-top: 1px;
+    height: 240px;
+    font-family: "Calibri Light";
+    font-weight: 100;
+    font-size: 18px;
+}
+
+.aboutfield h1 {
+    margin-top: 0px;
+}
+
+.user_avatar {
+    display: inline-block;
+    vertical-align: top;
+    background-color: #f5f5f5;
+    border-radius: 100%;
+    overflow: hidden;
+    margin: -8px 54px 0 0;
+    height: 170px;
+    width: 170px;
+    float: left;
+}
+
+.user_avatar > img {
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.logout {
+    border: 1px solid #e1e1e1;
+    width: 140px;
+    height: 46px;
+    border-radius: 40px;
+    padding: 12px 0 0 30px;
+    margin-left: 751px;
+    margin-top: -46px;
+}
+
+.edit {
+    border: 1px solid #e1e1e1;
+    width: 190px;
+    height: 46px;
+    border-radius: 40px;
+    padding: 12px 0 0 30px;
+    margin-left: 550px;
+    margin-top: -46px;
+}
+
+.logout:hover, .edit:hover {
+    border: 0 solid #e1e1e1;
+    background-color: #f4f4f4;
+}
+
+
