--- a/public/src/main/webapp/resources/css/my.css
+++ b/public/src/main/webapp/resources/css/my.css
@@ -899,6 +899,7 @@ body.nav-expanded {
     display: inline-block;
     vertical-align: top;
     zoom: 1;
+    border:none;
     font-size: 1.0625rem;
     padding: 0 30px;
     height: 50px;
@@ -1281,5 +1282,4 @@ body {
     border: 0 solid #e1e1e1;
     background-color: #f4f4f4;
 }
-
 
