--- a/public/src/main/webapp/resources/css/my.css
+++ b/public/src/main/webapp/resources/css/my.css
@@ -1509,6 +1509,16 @@ body {
     padding-bottom: 15px;
 }
 
+.checkbox_label{
+    font-weight: 100;
+    font-size: 20px;
+    font-family: Calibri Light;
+}
+
+.checkbox_margin{
+    margin-left: 111px;
+}
+
 
 
 
